# odoo-dental

./: .gitignore  .makim.yaml  .pre-commit-config.yaml  .sugar.yaml  README.md  pyproject.toml
.github/workflows/: ci.yml
addons/_scripts/: apply_l10n.py
conda/: dev.yaml
containers/: Dockerfile  compose.yaml
containers/config/: odoo.conf
scripts/: backup.sh  restore.sh
