[project]
name = "odoonto"
version = "0.1.0"  # semantic-release
description = "Odontological Clinic Odoo Modules"
authors = [
  {name = "Ivan Ogasawara", email = "ivan.ogasawara@gmail.com"}
]
license = "BSD 3 Clause"
repository = "https://github.com/xmnlab/odoonto"
homepage = "https://github.com/xmnlab/odoonto"
readme = "README.md"
requires-python = ">=3.9,<4"
dependencies = []

[build-system]
requires = ["poetry-core>=2", "poetry>=2"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
exclude = [
  ".git/*",
  ".envs/*",
]
package-mode = false

[tool.poetry.group.dev.dependencies]
pytest = ">=7"
pre-commit = ">=3"
mypy = ">=1"
pytest-cov = ">=3.0.0"
mkdocs = ">=1.3"
mkdocs-exclude = ">=1.0.2"
mkdocs-jupyter = ">=0.24.7"
mkdocs-literate-nav = ">=0.4.1"
mkdocs-macros-plugin = ">=0.6.3"
mkdocs-material = ">=8"
mkdocstrings = {version=">=0.19.0", extras=["python"]}
ruff = ">=0.1.5"
bandit = ">=1.7.5"
vulture = ">=2.7"
pymdown-extensions = ">=10.7.1"
containers-sugar = { version = ">=1.17.0", platform = "linux" }
makim = { version = ">=1.27.0" }


[tool.pytest.ini_options]
testpaths = [
    "tests",
]

[tool.mypy]
python_version = "3.9"
check_untyped_defs = true
strict = true
ignore_missing_imports = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true
show_error_codes = true
exclude = ["scripts/"]


[tool.ruff]
line-length = 79
force-exclude = true
src = ["./src/makim", "./tests"]
exclude = [
  "docs",
]
fix = true

[tool.ruff.lint]
select = [
  "E",   # pycodestyle
  "F",   # pyflakes
  "D",   # pydocstyle
  "YTT", # flake8-2020
  "PL",  # PL
  "RUF", # Ruff-specific rules
  "I001", # isort
  "I002", # isort
]
ignore = ["RUF012"]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.lint.isort]
# Use a single line between direct and from import
lines-between-types = 1

[tool.ruff.format]
quote-style = "single"


[tool.bandit]
exclude_dirs = ["tests"]
targets = "src/makim/"
skips = ["B102", "B701", "B507", "B601", "B603"]

[tool.vulture]
exclude = ["tests"]
ignore_decorators = []
ignore_names = ["verbose", "dry_run", "skip_hooks"]
make_whitelist = true
min_confidence = 80
paths = ["src/makim/"]
sort_by_size = true
verbose = false
